backend_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: dav-backend-svc
  labels:
    app: dav-huts-backend
spec:
  type: NodePort
  selector:
    app: dav-huts-backend
  ports:
    - port: 80
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dav-huts-backend-deployment
  labels:
    app: dav-huts-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dav-huts-backend
  template:
    metadata:
      labels:
        app: dav-huts-backend
    spec:
      containers:
        - name: dav-huts-backend
          image: localhost:32000/dav-huts-backend:registry
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 300m
              memory: 1Gi
            limits:
              cpu: 500m
              memory: 1Gi
