frontend_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: dav-frontend-svc
  labels:
    app: dav-huts-frontend
spec:
  type: NodePort
  selector:
    app: dav-huts-frontend
  ports:
    - port: 8080
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dav-huts-frontend-deployment
  labels:
    app: dav-huts-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dav-huts-frontend
  template:
    metadata:
      labels:
        app: dav-huts-frontend
    spec:
      containers:
        - name: dav-huts-frontend
          image: localhost:32000/dav-huts-frontend:registry
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 200Mi
